src/include/yices.h


__YICES_DLLSPEC__ extern int32_t yices_has_mcsat(void);
__YICES_DLLSPEC__ extern void yices_init(void);
__YICES_DLLSPEC__ extern void yices_exit(void);
__YICES_DLLSPEC__ extern void yices_reset(void);
__YICES_DLLSPEC__ extern void yices_free_string(char *s);
__YICES_DLLSPEC__ extern void yices_set_out_of_mem_callback(void (*callback)(void));
__YICES_DLLSPEC__ extern error_code_t yices_error_code(void);
__YICES_DLLSPEC__ extern error_report_t *yices_error_report(void);
__YICES_DLLSPEC__ extern void yices_clear_error(void);
 __YICES_DLLSPEC__ extern int32_t yices_print_error_fd(int fd);
__YICES_DLLSPEC__ extern char *yices_error_string(void);
__YICES_DLLSPEC__ extern void yices_init_term_vector(term_vector_t *v);
__YICES_DLLSPEC__ extern void yices_init_type_vector(type_vector_t *v);
__YICES_DLLSPEC__ extern void yices_delete_term_vector(term_vector_t *v);
__YICES_DLLSPEC__ extern void yices_delete_type_vector(type_vector_t *v);
__YICES_DLLSPEC__ extern void yices_reset_term_vector(term_vector_t *v);
__YICES_DLLSPEC__ extern void yices_reset_type_vector(type_vector_t *v);
__YICES_DLLSPEC__ extern type_t yices_bool_type(void);
__YICES_DLLSPEC__ extern type_t yices_int_type(void);
__YICES_DLLSPEC__ extern type_t yices_real_type(void);
__YICES_DLLSPEC__ extern type_t yices_bv_type(uint32_t size);
__YICES_DLLSPEC__ extern type_t yices_new_scalar_type(uint32_t card);
__YICES_DLLSPEC__ extern type_t yices_new_uninterpreted_type(void);
__YICES_DLLSPEC__ extern type_t yices_tuple_type(uint32_t n, const type_t tau[]);
__YICES_DLLSPEC__ extern type_t yices_tuple_type1(type_t tau1);
__YICES_DLLSPEC__ extern type_t yices_tuple_type2(type_t tau1, type_t tau2);
__YICES_DLLSPEC__ extern type_t yices_tuple_type3(type_t tau1, type_t tau2, type_t tau3);
__YICES_DLLSPEC__ extern type_t yices_function_type(uint32_t n, const type_t dom[], type_t range);
__YICES_DLLSPEC__ extern type_t yices_function_type1(type_t tau1, type_t range);
__YICES_DLLSPEC__ extern type_t yices_function_type2(type_t tau1, type_t tau2, type_t range);
__YICES_DLLSPEC__ extern type_t yices_function_type3(type_t tau1, type_t tau2, type_t tau3, type_t range);
__YICES_DLLSPEC__ extern int32_t yices_type_is_bool(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_type_is_int(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_type_is_real(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_type_is_arithmetic(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_type_is_bitvector(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_type_is_tuple(type_t tau);
__YICES_DLLSPEC__ extern int32_t yices_type_is_function(type_t tau);