src/include/yices_types.h


typedef int32_t term_t;
typedef int32_t type_t;
typedef struct context_s context_t;
typedef struct model_s model_t;
typedef struct ctx_config_s ctx_config_t;
typedef struct param_s param_t;
typedef enum smt_status {
  YICES_STATUS_IDLE,
  YICES_STATUS_SEARCHING,
  YICES_STATUS_UNKNOWN,
  YICES_STATUS_SAT,
  YICES_STATUS_UNSAT,
  YICES_STATUS_INTERRUPTED, 
  YICES_STATUS_ERROR
} smt_status_t;
typedef struct term_vector_s {
  uint32_t capacity;
  uint32_t size;
  term_t *data;
} term_vector_t;
typedef struct type_vector_s {
  uint32_t capacity;
  uint32_t size;
  type_t *data;
} type_vector_t;
typedef enum term_constructor {
  YICES_CONSTRUCTOR_ERROR = -1, 
  YICES_BOOL_CONSTANT,       
  YICES_ARITH_CONSTANT,      
  YICES_FF_CONSTANT,         
  YICES_ARITH_FF_CONSTANT = YICES_FF_CONSTANT, 
  YICES_BV_CONSTANT,         
  YICES_SCALAR_CONSTANT,     
  YICES_VARIABLE,            
  YICES_UNINTERPRETED_TERM,  
  YICES_ITE_TERM,            
  YICES_APP_TERM,            
  YICES_UPDATE_TERM,         
  YICES_TUPLE_TERM,          
  YICES_EQ_TERM,             
  YICES_DISTINCT_TERM,       
  YICES_FORALL_TERM,         
  YICES_LAMBDA_TERM,         
  YICES_NOT_TERM,            
  YICES_OR_TERM,             
  YICES_XOR_TERM,            
  YICES_BV_ARRAY,            
  YICES_BV_DIV,              
  YICES_BV_REM,              
  YICES_BV_SDIV,             
  YICES_BV_SREM,             
  YICES_BV_SMOD,             
  YICES_BV_SHL,              
  YICES_BV_LSHR,             
  YICES_BV_ASHR,             
  YICES_BV_GE_ATOM,          
  YICES_BV_SGE_ATOM,         
  YICES_ARITH_GE_ATOM,       
  YICES_ARITH_ROOT_ATOM,     
  YICES_ABS,                 
  YICES_CEIL,                
  YICES_FLOOR,               
  YICES_RDIV,                
  YICES_IDIV,                
  YICES_IMOD,                
  YICES_IS_INT_ATOM,         
  YICES_DIVIDES_ATOM,        
  YICES_SELECT_TERM,         
  YICES_BIT_TERM,            
  YICES_BV_SUM,              
  YICES_ARITH_SUM,           
  YICES_FF_SUM,              
  YICES_ARITH_FF_SUM = YICES_FF_SUM, 
  YICES_POWER_PRODUCT        
} term_constructor_t;
typedef enum yval_tag {
  YVAL_UNKNOWN,
  YVAL_BOOL,
  YVAL_RATIONAL,
  YVAL_ALGEBRAIC,
  YVAL_FINITEFIELD,
  YVAL_BV,
  YVAL_SCALAR,
  YVAL_TUPLE,
  YVAL_FUNCTION,
  YVAL_MAPPING
} yval_tag_t;
typedef struct yval_s {
  int32_t node_id;
  yval_tag_t node_tag;
} yval_t;
typedef struct yval_vector_s {
  uint32_t capacity;
  uint32_t size;
  yval_t *data;
} yval_vector_t;
typedef enum yices_gen_mode {
  YICES_GEN_DEFAULT,
  YICES_GEN_BY_SUBST,
  YICES_GEN_BY_PROJ,        
  YICES_GEN_BY_PROJ_WIDE,   
} yices_gen_mode_t;
typedef enum error_code {
  YICES_NO_ERROR = 0,
  INVALID_TYPE,
  INVALID_TERM,
  INVALID_CONSTANT_INDEX,
  INVALID_VAR_INDEX,       
  INVALID_TUPLE_INDEX,
  INVALID_RATIONAL_FORMAT,
  INVALID_FLOAT_FORMAT,
  INVALID_BVBIN_FORMAT,
  INVALID_BVHEX_FORMAT,
  INVALID_BITSHIFT,
  INVALID_BVEXTRACT,
  INVALID_BITEXTRACT,      
  TOO_MANY_ARGUMENTS,
  TOO_MANY_VARS,
  MAX_BVSIZE_EXCEEDED,
  DEGREE_OVERFLOW,
  DIVISION_BY_ZERO,
  POS_INT_REQUIRED,
  NONNEG_INT_REQUIRED,
  SCALAR_OR_UTYPE_REQUIRED,
  FUNCTION_REQUIRED,
  TUPLE_REQUIRED,
  VARIABLE_REQUIRED,
  ARITHTERM_REQUIRED,
  BITVECTOR_REQUIRED,
  SCALAR_TERM_REQUIRED,
  WRONG_NUMBER_OF_ARGUMENTS,
  TYPE_MISMATCH,
  INCOMPATIBLE_TYPES,
  DUPLICATE_VARIABLE,
  INCOMPATIBLE_BVSIZES,
  EMPTY_BITVECTOR,
  ARITHCONSTANT_REQUIRED,  
  INVALID_MACRO,           
  TOO_MANY_MACRO_PARAMS,   
  TYPE_VAR_REQUIRED,       
  DUPLICATE_TYPE_VAR,      
  BVTYPE_REQUIRED,         
  BAD_TERM_DECREF,         
  BAD_TYPE_DECREF,         
  INVALID_TYPE_OP,         
  INVALID_TERM_OP,         
  INVALID_FFSIZE,          
  INCOMPATIBLE_FFSIZES,    
  INVALID_TOKEN = 100,
  SYNTAX_ERROR,
  UNDEFINED_TYPE_NAME,
  UNDEFINED_TERM_NAME,
  REDEFINED_TYPE_NAME,
  REDEFINED_TERM_NAME,
  DUPLICATE_NAME_IN_SCALAR,
  DUPLICATE_VAR_NAME,
  INTEGER_OVERFLOW,
  INTEGER_REQUIRED,
  RATIONAL_REQUIRED,
  SYMBOL_REQUIRED,
  TYPE_REQUIRED,
  NON_CONSTANT_DIVISOR,
  NEGATIVE_BVSIZE,
  INVALID_BVCONSTANT,
  TYPE_MISMATCH_IN_DEF,
  ARITH_ERROR,
  BVARITH_ERROR,
  INVALID_FFCONSTANT,
  CTX_FREE_VAR_IN_FORMULA = 300,
  CTX_LOGIC_NOT_SUPPORTED,
  CTX_UF_NOT_SUPPORTED,
  CTX_ARITH_NOT_SUPPORTED,
  CTX_BV_NOT_SUPPORTED,
  CTX_ARRAYS_NOT_SUPPORTED,
  CTX_QUANTIFIERS_NOT_SUPPORTED,
  CTX_LAMBDAS_NOT_SUPPORTED,
  CTX_NONLINEAR_ARITH_NOT_SUPPORTED,
  CTX_FORMULA_NOT_IDL,
  CTX_FORMULA_NOT_RDL,
  CTX_TOO_MANY_ARITH_VARS,
  CTX_TOO_MANY_ARITH_ATOMS,
  CTX_TOO_MANY_BV_VARS,
  CTX_TOO_MANY_BV_ATOMS,
  CTX_ARITH_SOLVER_EXCEPTION,
  CTX_BV_SOLVER_EXCEPTION,
  CTX_ARRAY_SOLVER_EXCEPTION,
  CTX_SCALAR_NOT_SUPPORTED,   
  CTX_TUPLE_NOT_SUPPORTED,    
  CTX_UTYPE_NOT_SUPPORTED,    
  CTX_HIGH_ORDER_FUN_NOT_SUPPORTED, 
  CTX_INVALID_OPERATION = 400,
  CTX_OPERATION_NOT_SUPPORTED,
  CTX_UNKNOWN_DELEGATE = 420,
  CTX_DELEGATE_NOT_AVAILABLE,
  CTX_EF_ASSERTIONS_CONTAIN_UF = 440,
  CTX_EF_NOT_EXISTS_FORALL = 441,
  CTX_EF_HIGH_ORDER_VARS = 442,
  CTX_EF_INTERNAL_ERROR = 443,
  CTX_INVALID_CONFIG = 500,
  CTX_UNKNOWN_PARAMETER,
  CTX_INVALID_PARAMETER_VALUE,
  CTX_UNKNOWN_LOGIC,
  EVAL_UNKNOWN_TERM = 600,
  EVAL_FREEVAR_IN_TERM,
  EVAL_QUANTIFIER,
  EVAL_LAMBDA,
  EVAL_OVERFLOW,
  EVAL_FAILED,
  EVAL_CONVERSION_FAILED,
  EVAL_NO_IMPLICANT,
  EVAL_NOT_SUPPORTED,
  MDL_UNINT_REQUIRED = 700,
  MDL_CONSTANT_REQUIRED,
  MDL_DUPLICATE_VAR,
  MDL_FTYPE_NOT_ALLOWED,
  MDL_CONSTRUCTION_FAILED,
  MDL_NONNEG_INT_REQUIRED,
  YVAL_INVALID_OP = 800,
  YVAL_OVERFLOW,
  YVAL_NOT_SUPPORTED,
  MDL_GEN_TYPE_NOT_SUPPORTED = 900,
  MDL_GEN_NONLINEAR,
  MDL_GEN_FAILED,
  MDL_GEN_UNSUPPORTED_TERM,
  MCSAT_ERROR_UNSUPPORTED_THEORY = 1000,
  MCSAT_ERROR_ASSUMPTION_TERM_NOT_SUPPORTED = 1001,
  MCSAT_ERROR_ASSUMPTION_TYPE_NOT_SUPPORTED = 1002, 
  OUTPUT_ERROR = 9000,
  INTERNAL_EXCEPTION = 9999
} error_code_t;
typedef struct error_report_s {
  error_code_t code;
  uint32_t line;
  uint32_t column;
  term_t term1;
  type_t type1;
  term_t term2;
  type_t type2;
  int64_t badval;
} error_report_t;